p3/app/style.css
.script-item {
    background-color: rgba(0,0,0,0.1);
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 16px;
}
.script-item-hover {
    background-color: rgba(255, 255, 255, 0.05);
    border: 1px solid rgba(255, 255, 255, 0.9);
    border-radius: 16px;
    box-shadow: 0 0px 0px rgba(0, 0, 0, 0.2);
    transition: all 200ms ease-in-out;
}
.item-subcategory {
    background-image: url('icons/jigsaw.svg');
    background-size: 80px;
    background-repeat: no-repeat;
    background-position: left;
    border-radius: 16px;
}
flowboxchild:selected {
    border-radius: 16px;
}

paned > separator {
    min-width: 15px;  /* For horizontal paned */
    min-height: 15px; /* For vertical paned */
    background-color: transparent; /* Makes it look like empty padding */
}

